WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98926
[BlackBerry] Fix crash for detached node when validating selection change.
https://bugs.webkit.org/show_bug.cgi?id=98926
Summary
[BlackBerry] Fix crash for detached node when validating selection change.
Mike Fenton
Reported
2012-10-10 10:24:56 PDT
SSIA.
Attachments
Patch
(2.27 KB, patch)
2012-10-10 11:19 PDT
,
Mike Fenton
rwlbuis
: review+
mifenton
: commit-queue+
Details
Formatted Diff
Diff
Updated Patch.
(2.27 KB, patch)
2012-10-10 11:38 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-10-10 11:19:46 PDT
Created
attachment 168042
[details]
Patch
Rob Buis
Comment 2
2012-10-10 11:23:30 PDT
Comment on
attachment 168042
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2012-10-10 11:24:55 PDT
Attachment 168042
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Sou..." exit_code: 1 Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:59: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mike Fenton
Comment 4
2012-10-10 11:38:24 PDT
Created
attachment 168049
[details]
Updated Patch.
WebKit Review Bot
Comment 5
2012-10-10 18:40:27 PDT
Comment on
attachment 168049
[details]
Updated Patch. Clearing flags on attachment: 168049 Committed
r130991
: <
http://trac.webkit.org/changeset/130991
>
WebKit Review Bot
Comment 6
2012-10-10 18:40:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug