[BlackBerry] Fix crash for detached node when validating selection change. https://bugs.webkit.org/show_bug.cgi?id=98926

Reviewed by Rob Buis.

PR 220628.

Guard against detached nodes when generating selection rect.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::visibleTextQuads):


Canonical link: https://commits.webkit.org/116963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130991 268f45cc-cd09-0410-ab3c-d52691b4dbfc